// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`IconButton renders with given \`type\` provided 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 44px;
  height: 44px;
}

<div>
  <button
    class="c0"
    type="submit"
  />
</div>
`;

exports[`IconButton renders with given \`width\` or \`height\` provided 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 12px;
  height: 12px;
}

<div>
  <button
    class="c0"
    type="button"
  />
</div>
`;

exports[`IconButton renders with minTapSize with no \`width\` or \`height\` provided 1`] = `
.c0 {
  margin: initial;
  padding: initial;
  border: 0;
  color: inherit;
  font-weight: inherit;
  font-size: inherit;
  font-family: inherit;
  line-height: inherit;
  -webkit-letter-spacing: inherit;
  -moz-letter-spacing: inherit;
  -ms-letter-spacing: inherit;
  letter-spacing: inherit;
  text-align: inherit;
  text-transform: inherit;
  background-color: transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 44px;
  height: 44px;
}

<div>
  <button
    class="c0"
    type="button"
  />
</div>
`;

exports[`Stack renders correctly with amphitheatre \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 24px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with arena \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 32px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with auditorium \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 16px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with club \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with compact \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with dome \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 64px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with expanded \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 24px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with field \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 88px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with giant \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 40px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with hall \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 12px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with lounge \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 4px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with medium \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 12px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with moderate \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 8px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with no \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 16px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with normal \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 16px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with spacious \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 32px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with stadium \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 48px;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Stack renders correctly with theatre \`gap\` provided 1`] = `
.c0.c0 > * + * {
  margin-top: 20px;
}

<div>
  <div
    class="c0"
  />
</div>
`;
